grammar.js
    program: ($) => repeat($.top_decl),

    top_decl: ($) =>
      choice(
        $.type_def_decl,
        $.enum_type_def_decl,
        $.event_decl,
        $.event_set_decl,
        $.interface_decl,
        $.impl_machine_decl,
        $.spec_machine_decl,
        $.fun_decl,
        $.pure_decl,
        $.named_module_decl,
        $.test_decl,
        $.implementation_decl,
        $.global_param_decl,
        $.invariant_decl,
        $.invariant_group_decl,
        $.axiom_decl,
        $.assume_on_start_decl,
        $.proof_block_decl
      ),

    // -------------------------------------------------------------------------
    // Identifiers and literals
    // -------------------------------------------------------------------------

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    type: ($) =>
      choice(
        $.seq_type,
        $.set_type,
        $.map_type,
        $.tuple_type,
        $.named_tuple_type,
        $.primitive_type,
        $.named_type
      ),

    seq_type: ($) => seq("seq", "[", $.type, "]"),
    set_type: ($) => seq("set", "[", $.type, "]"),
    map_type: ($) =>
      seq("map", "[", field("key_type", $.type), ",", field("value_type", $.type), "]"),
    tuple_type: ($) =>
      seq("(", $.type, repeat(seq(",", $.type)), ")"),
    named_tuple_type: ($) => seq("(", $.iden_type_list, ")"),

    primitive_type: (_) =>
      choice("bool", "int", "float", "string", "event", "machine", "data", "any"),

    named_type: ($) => field("name", $.identifier),

    iden_type_list: ($) => seq($.iden_type, repeat(seq(",", $.iden_type))),
    iden_type: ($) =>
      seq(field("name", $.identifier), ":", $.type),

    fun_param: ($) => seq(field("name", $.identifier), ":", $.type),

    // -------------------------------------------------------------------------
    // Declarations
    // -------------------------------------------------------------------------

    // TYPE foo ;
    // TYPE foo = type ;
    type_def_decl: ($) =>
      choice(
        seq("type", field("name", $.identifier), ";"),
        seq("type", field("name", $.identifier), "=", $.type, ";")
      ),

    // ENUM foo { ... }
    impl_machine_decl: ($) =>
      seq(
        "machine",
        field("name", $.identifier),
        repeat($.receives_sends),
        $.machine_body
      ),

    machine_body: ($) => seq("{", repeat($.machine_entry), "}"),
    machine_entry: ($) => choice($.var_decl, $.fun_decl, $.state_decl),

    state_decl: ($) =>
      seq(
        optional("start"),
        optional(field("temperature", choice("hot", "cold"))),
        "state",
        field("name", $.identifier),
        "{",
        repeat($.state_body_item),
        "}"
      ),

    state_body_item: ($) =>
      choice(
        $.state_entry,
        $.state_exit,
        $.state_defer,
        $.state_ignore,
        $.on_event_do_action,
        $.on_event_goto_state
      ),

    state_entry: ($) =>
      seq(
        "entry",
        choice(
          $.anon_event_handler,
          seq(field("fun_name", $.identifier), ";")
        )
      ),

    state_exit: ($) =>
      seq(
        "exit",
        choice(
          $.no_param_anon_event_handler,
          seq(field("fun_name", $.identifier), ";")
        )
      ),

    state_defer: ($) =>
      seq("defer", $.non_default_event_list, ";"),

    state_ignore: ($) =>
      seq("ignore", $.non_default_event_list, ";"),

    on_event_do_action: ($) =>
      seq(
        "on",
        $.event_list,
        "do",
        choice(
          seq(field("fun_name", $.identifier), ";"),
          $.anon_event_handler
        )
      ),

    on_event_goto_state: ($) =>
      seq(
        "on",
        $.event_list,
        "goto",
        $.state_name,
        choice(
          ";",
          seq("with", $.anon_event_handler),
          seq("with", field("fun_name", $.identifier), ";")
        )
      ),

    non_default_event_list: ($) =>
      seq($.non_default_event, repeat(seq(",", $.non_default_event))),

    non_default_event: ($) => choice("halt", $.identifier),

    event_list: ($) => seq($.event_id, repeat(seq(",", $.event_id))),

    event_id: ($) => choice($.null_literal, "halt", $.identifier),

    state_name: ($) => field("state", $.identifier),

    // -------------------------------------------------------------------------
    // Function bodies and statements
    // -------------------------------------------------------------------------

    function_body: ($) => seq("{", repeat($.var_decl), repeat($.statement), "}"),

    statement: ($) =>
      choice(
        $.compound_stmt,
        $.assert_stmt,
        $.assume_stmt,
        $.print_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.assign_stmt,
        $.insert_stmt,
        $.add_stmt,
        $.remove_stmt,
        $.while_stmt,
        $.foreach_stmt,
        $.if_stmt,
        $.ctor_stmt,
        $.fun_call_stmt,
        $.raise_stmt,
        $.send_stmt,
        $.announce_stmt,
        $.goto_stmt,
        $.receive_stmt,
        $.no_stmt
      ),

    return_stmt: ($) => seq("return", optional($.expr), ";"),

    anon_event_handler: ($) =>
      seq(optional(seq("(", $.fun_param, ")")), $.function_body),

    mod_expr: ($) =>
      choice(
        $.paren_module_expr,
        $.primitive_module_expr,
        $.named_module,
        $.compose_module_expr,
        $.union_module_expr,
        $.hide_events_module_expr,
        $.hide_interfaces_module_expr,
        $.assert_module_expr,
        $.rename_module_expr,
        $.main_machine_module_expr
      ),

    primitive_module_expr: ($) =>
      seq("{", $.bind_expr, repeat(seq(",", $.bind_expr)), "}"),

    bind_expr: ($) =>
      seq(field("m_name", $.identifier), optional(seq("->", field("i_name", $.identifier)))),

    // TEST declarations
    test_decl: ($) =>
      choice($.safety_test_decl, $.refinement_test_decl),

    safety_test_decl: ($) =>
      seq(
        "test",
        optional(seq("param", field("global_param", $.param))),
        optional(seq("assume", field("assume_expr", $.expr))),
        optional($.twise),
        field("test_name", $.identifier),
        "[", "main", "=", field("main_machine", $.identifier), "]",
        ":",
        $.mod_expr,
        ";"
      ),

    refinement_test_decl: ($) =>
      seq(
        "test",
        field("test_name", $.identifier),
        "[", "main", "=", field("main_machine", $.identifier), "]",
        ":",
        $.mod_expr,
        "refines",
        $.mod_expr,
        ";"
      ),

    implementation_decl: ($) =>
      seq(
        "implementation",
        field("impl_name", $.identifier),
        optional(seq("[", "main", "=", field("main_machine", $.identifier), "]")),
        ":",
        $.mod_expr,
        ";"
      ),
